# signal-ch

./: .env.example  .gitignore  docker-compose.yml  signal.md
.github/workflows/: deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  briefs.py  entities.py  ios.py  search.py  votes.py
backend/app/ingestion/: admin_ch.py  base.py  bfs.py  curia_vista.py  opendata_swiss.py  rss_monitor.py  scheduler.py  sogc_shab.py  tasks.py
backend/app/models/: __init__.py  annotation.py  democracy.py  entity.py  intelligence_object.py  mindmap.py  publisher.py  source.py  user.py
backend/app/nlp/: classification.py  embeddings.py  entity_resolution.py  ner.py  pipeline.py
backend/app/schemas/: entity.py  io.py  source.py  user.py
backend/app/seed/: publishers.py
backend/app/services/: brief_generator.py  editorial.py  notification.py  search_sync.py
backend/app/synthesis/: engine.py  prompts.py  quality.py
backend/tests/: test_classification.py  test_ner.py
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/messages/: de.json  en.json  fr.json  it.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/migrations/: 0001_initial.sql
worker/seed/: publishers.sql
worker/src/: auth.ts  index.ts  types.ts  utils.ts
(+28 files in other folders)
